User Profile Update Angular Work Completed

--- a/src/ui/internal-audit/src/app/views/public/components/forgot-password/forgot-password.component.html
+++ b/src/ui/internal-audit/src/app/views/public/components/forgot-password/forgot-password.component.html
@@ -1,1 +1,31 @@
-<p>forgot-password works!</p>
+<div class="bg-secondary min-vh-100 d-flex flex-row align-items-center">
+  <c-container>
+    <c-row class="justify-content-center">
+      <c-col md="4">
+        <c-card class="p-4 bg-login-card">
+          <img src="/assets/images/logo.png" class="login-logo"/>
+          <c-card-body>
+            <div *ngIf="!isResetLinkSent">
+              <h6 cRow>Enter Your Email to Reset Password</h6>
+              <div>
+                <c-row>
+                  <input type="text" class="form-control" [(ngModel)]="email">
+                </c-row>
+              </div>
+              <c-row>
+
+                <button class="btn btn-primary mt-3" type="submit" (click)="submit()">
+                  Submit</button>
+              </c-row>
+            </div>
+           <div *ngIf="isResetLinkSent">
+             <h3>Password reset link has sent to your email. Please your check inbox.</h3>
+           </div>
+          </c-card-body>
+        </c-card>
+      </c-col>
+    </c-row>
+  </c-container>
+</div>
+
+
