Password Rest Completed

--- a/src/ui/internal-audit/src/app/views/public/components/forgot-password/forgot-password.component.html
+++ b/src/ui/internal-audit/src/app/views/public/components/forgot-password/forgot-password.component.html
@@ -17,7 +17,13 @@
                 <button class="btn btn-primary mt-3" type="submit" (click)="submit()">
                   Submit</button>
               </c-row>
+              <c-row>
+                <div class="d-flex justify-content-end">
+                  <a routerLink="/login">Return To Login</a>
+                </div>
+              </c-row>
             </div>
+
            <div *ngIf="isResetLinkSent">
              <h3>Password reset link has sent to your email. Please your check inbox.</h3>
            </div>
