--- a/src/ui/internal-audit/src/app/views/public/components/reset-password/reset-password.component.html
+++ b/src/ui/internal-audit/src/app/views/public/components/reset-password/reset-password.component.html
@@ -45,13 +45,15 @@
               </div>
 
               <div class="col-md-12 mt-3">
-                <button class="btn btn-primary w-100" type="submit" (click)="submit()">
+                <button class="btn btn-primary w-100" type="submit">
                   Reset Password</button>
               </div>
             </form>
             <div *ngIf="isInvalidCode">
               <h4>Password Reset Link is not valid anymore</h4>
-              <span>Do you want to reset anyways, then <a routerLink="/login">click here</a></span>
+              <span>Do you want to reset anyways, then <a routerLink="/forgot-password">Click here</a></span>
+              <br>
+              <span>For Return to Login <a routerLink="/login">Click here</a></span>
             </div>
           </c-card-body>
         </c-card>
